# azul_gui_test

./: Cargo.toml
img/: svg.css
